Fix add credit bug. Left align combo boxes. Increase file size limit

--- a/src/main/resources/static/css/app.css
+++ b/src/main/resources/static/css/app.css
@@ -527,3 +527,6 @@ body.fb_hidden {
   position: absolute;
   left: 50%;
   z-index: 4; }
+
+.bootstrap-select.btn-group .dropdown-menu li a {
+  text-align: left; }
